deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 4al2-groupe-2
  name: deployment-backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: barlords/backend:latest
---

apiVersion: v1
kind: Service
metadata:
  namespace: 4al2-groupe-2
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
