ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: 4al2-groupe-2
  labels:
    app.kubernetes.io/component: controller
  name: ingress-backend
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-backend
  namespace: 4al2-groupe-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: ingress-backend
  tls:
    - hosts:
        - backend
      secretName: # Le nom de votre secret contenant le certificat ssl
  rules:
    - host: backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: # Le nom de votre service
                port:
                  number: 5432
