ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: 4al2-groupe-2
  labels:
    app.kubernetes.io/component: controller
  name: ingress-class-frontend
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: 4al2-groupe-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: ingress-class-frontend
  tls:
    - hosts:
        - frontend.4al2.groupe2.jbienvenu.fr
      secretName: frontend-certificate
  rules:
    - host: frontend.4al2.groupe2.jbienvenu.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
